--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,6 +6,29 @@
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
 
+// https://github.com/mmistakes/minimal-mistakes/issues/1219#issuecomment-326809412
+html {
+    font-size: 9pt; // originally 16px
+    @include breakpoint($medium) {
+        font-size: 9pt; // originally 18px
+    }
+
+    @include breakpoint($large) {
+        font-size: 9pt; // originally 20px
+    }
+
+    @include breakpoint($x-large) {
+        font-size: 9pt; // originally 22px
+    }
+}
+
+// https://github.com/mmistakes/minimal-mistakes/blob/master/_sass/minimal-mistakes/_syntax.scss
+// https://stackoverflow.com/a/38490989/152997
+div .highlighter-rouge {
+    max-height: 400px;
+    overflow-y: auto;
+}
+
 body {
     background: red;
 }
